<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapboxMapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="55.944"
        mapbox:mapbox_cameraTargetLng="-3.188396"
        mapbox:mapbox_cameraZoom="15"
        mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets"
        />

    <Button
        android:id="@+id/btnCollect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="collect"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSignout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="sign out"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Menu"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btndig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="dig"
        mapbox:layout_constraintBottom_toTopOf="@+id/btnCollect"
        mapbox:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBuilding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="building"
        mapbox:layout_constraintBottom_toTopOf="@+id/btnWallet"
        mapbox:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="for test"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>